@@ -6,6 +6,24 @@ Multiply your BMR by your activity level factor to determine your total daily en
 Adjust your calorie intake based on your goals. If you want to lose weight, you will need to create a calorie deficit by consuming fewer calories than your TDEE. If you want to gain weight, you will need to consume more calories than your TDEE. If you want to maintain your weight, you should aim to consume roughly the same number of calories as your TDEE.
 Remember, these are just rough estimates, and your actual calorie needs may vary based on factors such as your age, body composition, and genetics. It's always a good idea to consult with a healthcare professional or a registered dietitian to determine the best calorie intake for you.
 
+# Software
+JavaFX SDK 19 - https://openjfx.io/
+
+Scene Builder 19.0.0 - https://gluonhq.com/products/scene-builder/
+
+IntelliJ IDEA - https://www.jetbrains.com/idea/
+
+JavaFX config for IntelliJ - https://openjfx.io/openjfx-docs/
+
+Change VM options: --module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml
+
+PATH_TO_FX - path to JavaFX lib folder
+
+# How to run the application
+Download the project from the repository or just simply copy the code file and paste it in your code editor.
+Open the project in your favorite editor (preferable IntelliJ IDEA)
+Run the application
+
 
 # Calculation Method
 To calculate the number of calories you need per day, you can use the following formula:
@@ -32,6 +50,19 @@ For example, if you are a 30-year-old woman who weighs 150 pounds, is 5'5" tall,
 Your TDEE would then be 1462 x 1.2 = 1754 calories/day.
 
 This is just a rough estimate, and your actual calorie needs may be different depending on a variety of factors such as your age, body composition, and goals. It's always a good idea to consult with a healthcare professional or a registered dietitian to determine the best calorie intake for you.
+
+# Contributions
+Anyone can contribute to this repository. If you want to contribute, please follow the steps below:
+1)  Fork this repository
+2)  Clone the forked repository
+3)  Create a new branch
+4)  Make changes to the code
+5)  Commit the changes
+6)  Push the changes to the forked repository
+7)  Create a pull request
+8)  Wait for the pull request to be merged
+9)  Celebrate your contribution to this repository
+10) Repeat steps 1-9
 
 # ScreenShots
 <img width="960" alt="image" src="https://user-images.githubusercontent.com/86466557/209962779-2325be9f-0900-407e-a7a6-9b7f233e0e79.png">
